--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
-<!DOCTYPE html>
+<h1> os melhores filmes de romance que você pode assistir</h1>
+            <p> veja as recomendações de filmes da sofia </p>
+        </div>
+
+        <div>
+            <iframe width="560" height="315" sr<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>soflix</title>
+    <title>majuflix</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-     <header>  só romance  </header>
+    <header> SOFLIX </header>
+    <section>
+        <div class="chamada_texto"> c=<iframe width="560" height="315" src="https://www.youtube.com/embed/o9f8c9w2iDg?si=zf3UERDOxsxw1DNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/NV7PBRBcxu0?si=-gfIZrRTeLvz_A9Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
+    <img src="fotofeia.jpeg" alt="Meu vizinho é muito estranho">
 
-   <h1>os melhores filmes de romace que você pode assistir</h1>
-
-    <p> veja as recomendações de filme da sofia. </p>
-
+    </a>
 </body>
 </html>
