--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<h1> os melhores filmes de romance que você pode assistir</h1>
-            <p> veja as recomendações de filmes da sofia </p>
-        </div>
-
-        <div>
-            <iframe width="560" height="315" sr<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -17,12 +11,13 @@
 <body>
     <header> SOFLIX </header>
     <section>
-        <div class="chamada_texto"> c=<iframe width="560" height="315" src="https://www.youtube.com/embed/o9f8c9w2iDg?si=zf3UERDOxsxw1DNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="chamada_texto"> 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/o9f8c9w2iDg?si=zf3UERDOxsxw1DNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
-    <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/NV7PBRBcxu0?si=-gfIZrRTeLvz_A9Z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
-    <img src="nbhj.jpg" alt="de repente 30">
 
+    <a href="https://www.youtube.com/embed/NV7PBRBcxu0?si=-gfIZrRTeLvz_A9Z">
+        <img src="nbhj.jpg" alt="de repente 30">
     </a>
 </body>
 </html>
