--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>majuflix</title>
+    <title>soflix</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header> SOFLIX </header>
     <section>
         <div class="chamada_texto"> 
+    <h1> os melhores romances !</h1>
+    <p> essas são as recomendações da sofia </p>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/o9f8c9w2iDg?si=zf3UERDOxsxw1DNc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
